# TFG

./: .gitignore  README.md
dpdk-selective-capping/: env.sh  run.sh
dpdk-selective-capping/include/: commring.h  cores.h  headers.h  kernel.h  macros.h  types.h  utils.h
dpdk-selective-capping/src/: commring-cpu.cpp  commring-gpu.cpp  commring-spu.cpp  commring.cpp  commring_cpu.cpp  commring_gpu.cpp  commring_spu.cpp  communication_ring.cpp  cores-linear.cpp  cores-scheduled.cpp  cores.cpp  cores_cpu.cpp  cores_gpu.cpp  cores_spu.cpp  kernel.cu  main.cpp  utils.cpp
gpuhostnic/: env.sh  meson.build  run.sh
gpuhostnic/include/: commring.h  cores.h  cuda_headers.h  gpuhostnic_shmem.h  headers.h  kernel.h  macros.h  parser.h  utils.h
gpuhostnic/src/: dxcore.cpp  gpuhostnic_shmem.cpp  kernel.cu  main.cpp  meson.build  parser.cpp  rxcore.cpp  txcore.cpp  utils.cpp
host_nic/: meson.build
host_nic/include/: network_headers.h  selcap.h  types.h
host_nic/src/: driver-mono.c  driver-multi.c  driver.c  meson.build  selcap.c
hostnic/: meson.build
hostnic/include/: capping.h  sighandling.h  types.h
hostnic/src/: capping.c  driver-mono.c  driver-multi.c  meson.build  selcap.c
memoria/: Makefile  tfg.tex
memoria/text/: conclusions.tex  design.tex  implementation.tex  intro.tex  results.tex  resumen.tex  soa.tex
pcap-selective-capping/include/: capping.h  headers.h  macros.h  network_headers.h  sighandling.h  types.h  utils.h
pcap-selective-capping/src/: driver-mono.c  driver-multi.c  main.c  sighandling.c  utils.c
